src/snapshots/matcha__parser__test__parse_builder_block.snap
---
source: src/parser.rs
expression: "Hello {[ name ]}, good to meet you"
---
[
    Text(
        "Hello ",
    ),
    Builder(
        "name",
    ),
    Text(
        ", good to meet you",
    ),
]
