src/snapshots/matcha__parser__test__parse_builder_expression.snap
---
source: src/parser.rs
expression: "Hello {[ string_tree.from_strings([\"Anna\", \" and \", \"Bob\"]) ]}, good to meet you"
---
[
    Text(
        "Hello ",
    ),
    Builder(
        "string_tree.from_strings([\"Anna\", \" and \", \"Bob\"])",
    ),
    Text(
        ", good to meet you",
    ),
]
