src/snapshots/matcha__parser__test__parse_empty_if_statement.snap
---
source: src/parser.rs
expression: "Hello {% if is_user %}{% endif %}"
---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [],
        [],
    ),
]
