src/snapshots/matcha__parser__test__parse_for_from_expression.snap
---
source: src/parser.rs
expression: "Hello {% for item as Item in list.take(list, 2) %}{{ item }}{% endfor %}"
---
[
    Text(
        "Hello ",
    ),
    For(
        "item",
        Some(
            "Item",
        ),
        "list.take(list, 2)",
        [
            Identifier(
                "item",
            ),
        ],
    ),
]
