src/snapshots/matcha__parser__test__parse_function.snap
---
source: src/parser.rs
expression: "{> fn classes()\na b c d\n{> endfn\n"
---
[
    BlockFunction(
        "classes()",
        [
            Text(
                "a b c d",
            ),
        ],
        0..0,
    ),
]
