src/snapshots/matcha__parser__test__parse_function_with_trailing_new_line.snap
---
source: src/parser.rs
expression: "{> fn classes()\na b c d\n\n{> endfn\n"
---
[
    BlockFunction(
        Private,
        "classes()",
        [
            Text(
                "a b c d\n",
            ),
        ],
        0..0,
    ),
]
