src/snapshots/matcha__parser__test__parse_identifier.snap
---
source: src/parser.rs
expression: "Hello {{ name }}, good to meet you"
---
[
    Text(
        "Hello ",
    ),
    Identifier(
        "name",
    ),
    Text(
        ", good to meet you",
    ),
]
