src/snapshots/matcha__parser__test__parse_if_else_statement.snap
---
source: src/parser.rs
expression: "Hello {% if is_user %}User{% else %}Unknown{% endif %}"
---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [
            Text(
                "User",
            ),
        ],
        [
            Text(
                "Unknown",
            ),
        ],
    ),
]
