src/snapshots/matcha__parser__test__parse_if_statement.snap
---
source: src/parser.rs
expression: "Hello {% if is_user %}User{% endif %}"
---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [
            Text(
                "User",
            ),
        ],
        [],
    ),
]
