src/snapshots/matcha__parser__test__parse_single_parens.snap
---
source: src/parser.rs
expression: "Hello { name }, good to meet you"
---
[
    Text(
        "Hello { name }, good to meet you",
    ),
]
