src/snapshots/matcha__parser__test__parse_tree_block.snap
---
source: src/parser.rs
expression: "Hello {[ name ]}, good to meet you"
snapshot_kind: text
---
[
    Text(
        "Hello ",
    ),
    Builder(
        "name",
    ),
    Text(
        ", good to meet you",
    ),
]
